[package]
name = "mult_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
rand = "0.8.5"
rusqlite = "0.30.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rusqlite = "0.5.0"
